# models/userModel.js
@@ -1,0 +1,10 @@
+const mongoose = require('mongoose');
+
+const userSchema = new mongoose.Schema({
+    name: { type: String, required: true },
+    email: { type: String, required: true, unique: true },
+    password: { type: String },
+    googleId: { type: String }, // For Google OAuth
+});
+
+module.exports = mongoose.model('User', userSchema);
